fixed the dropdown menu getting out of the viewport in the responsive mode.

--- a/client/src/app/dropdown/dropdown.component.css
+++ b/client/src/app/dropdown/dropdown.component.css
@@ -1,6 +1,8 @@
 .list {
     position: fixed;
-    /* left: calc(100vw - 175px); */
+
+    transform: translate(-150px, 0px);
+
     list-style-type: none;
     margin: 5px;
     background-color: white;
